2017-09-08  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Add the files misc/vendorversion.c and misc/vendorversion.h, that I forget
	to add in the last commit.

2017-09-08  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29523 and r29532 with adjustments due to code changes.

	* misc/CMakeLists.txt: Set new file vendorversion.c.

	* misc/vendorversion.c: New file with functions to set and to get
	the vendor version.

	* misc/vendorversion.h: New file with functions prototypes.

	* nasl/nasl.c: Include ../misc/vendorversion.h.
	(main) Add new command line option vendor-version.

	* nasl/init.c (libfuncs): Add vendor_version().

	* nasl/nasl_scanner_glue.c: Include ../misc/vendorversion.h.
	(nasl_vendor_version): New function.

	* nasl/nasl_scanner_glue.h: Add function prototype.

2017-09-06  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_isotime.c: Revert changes in r29097 and 28274.

2017-07-26  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r29167.

	* nasl/nasl_socket.c (nasl_open_sock_udp): Set lowest_socket variable.
	(nasl_close_socket): Check lowest_socket instead of using hardcoded
	value. Fixes close() error for udp sockets.

	* nasl/nasl_ssh.c (nasl_ssh_connect): Set lowest_socket variable.

2017-07-24  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29164.

	* nasl/exec.c (cell_cmp): Use cell2str() to copy the cell's values
	since it checks if the cell is NULL and	then they are freed conveniently.

2017-07-18  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_ssh.c (verify_session_id): Correct error message for
	Invalid session id.

2017-07-17  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r28568, r28788, r28859, r28978, r28999, r29013, r29038,
	r29046, r29070. With adjustments due to code changes.

	* nasl/nasl_debug.c (nasl_set_filename, nasl_get_filename)
	(nasl_set_function_filename, nasl_set_function_name)
	(nasl_get_function_name): New function.