@@ -115,14 +115,15 @@ examine_signatures (gpgme_verify_result_t result, int sig_count)
  *         -1 on missing file or error.
  */
 int
-nasl_verify_signature (const char *filename, const char *fcontent, size_t flen)
+nasl_verify_signature (const char *filename)
 {
   int retcode = -1, sig_count = 0;
   char *sigfilename = NULL;
-  gsize siglen = 0;
+  gsize siglen = 0, flen = 0;
   gchar * scontent = NULL;
   gchar * offset = NULL;
   gchar * endpos = NULL;
+  gchar * fcontent = NULL;
   gboolean success;
   gpgme_error_t err;
   gpgme_ctx_t ctx = openvas_init_gpgme_sysconf_ctx ();
@@ -133,6 +134,12 @@ nasl_verify_signature (const char *filename, const char *fcontent, size_t flen)
       nasl_trace (NULL, "gpgme context could not be initialized.\n");
       goto fail;
     }
+
+  /* Scriptfile is buffered. */
+  nasl_trace (NULL, "nasl_verify_signature: loading scriptfile '%s'\n",
+              filename);
+  if (!g_file_get_contents (filename, &fcontent, &flen, NULL))
+    goto fail;
 
   /* Signatures file is buffered. */
   sigfilename = g_malloc0 (strlen (filename) + 4 + 1);
@@ -223,6 +230,7 @@ nasl_verify_signature (const char *filename, const char *fcontent, size_t flen)
 
  fail:
   g_free (scontent);
+  g_free (fcontent);
   if (sig)
     gpgme_data_release (sig);
   if (text)
