@@ -1,3 +1,8 @@
+2017-09-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* nasl/nasl_global_ctxt.h, nasl/nasl_grammar.y, nasl/nasl_signature.c,
+	nasl/nasl_signature.h: Revert r29048 and r29067.
+
 2017-09-08  Juan Jose Nicola  <juan.nicola@greenbone.net>
 
 	Add the files misc/vendorversion.c and misc/vendorversion.h, that I forget
